--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
+    "node-notifier": "^10.0.1",
     "puppeteer": "^19.7.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node-notifier": "^8.0.2"
+  }
 }
