--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "node-notifier": "^10.0.1",
-    "puppeteer": "^19.7.2"
+    "puppeteer-core": "^19.7.2"
   },
   "type": "module",
   "devDependencies": {
